--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
    "name": "sailfish",
-   "version": "0.0.1"
-
+   "version": "0.0.1",
+   "main" : "./index.js",
+   "dependencies" : {
+      "express"  : "latest"
+   }
 }
