--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "dependencies" : {
       "express"  : "latest",
       "dot" : "latest",
-      "requirejs" : "latest"
+      "requirejs" : "latest",
+      "less-middleware" : "latest"
    }
 }
