--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.0.1",
    "main" : "./index.js",
    "dependencies" : {
+      "node.extend" : "latest",
       "express"  : "latest",
       "dot" : "latest",
       "requirejs" : "latest",
