--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "less": "1.5.x"
     },
     "description": "sailfish - это фремфорк для создания web-приложений на JavaScript. Фреймворк является самодостаточным, т.е содержит в себе как серверную так и клиентскую части.",
-    "devDependencies": {},
+    "devDependencies": {
+      "karma": "~0.8"
+    },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "./node_modules/.bin/karma start"
     },
     "repository": {
         "type": "git",
