--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "description": "sailfish - это фремфорк для создания web-приложений на JavaScript. Фреймворк является самодостаточным, т.е содержит в себе как серверную так и клиентскую части.",
     "devDependencies": {
-      "karma": "~0.8"
+      "karma": "0.10.x"
     },
     "scripts": {
         "test": "./node_modules/.bin/karma start"
