--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "dot": "1.0.x",
         "requirejs": "2.1.9",
         "less-middleware": "0.1.x",
-        "less": "1.5.x"
+        "less": "1.5.x",
+        "mkdirp": "0.3.x"
     },
     "description": "sailfish - это фремфорк для создания web-приложений на JavaScript. Фреймворк является самодостаточным, т.е содержит в себе как серверную так и клиентскую части.",
     "devDependencies": {
