--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     },
     "dependencies": {
         "commander": "2.1.x",
-        "walk": "2.2.x",
+        "walk": "2.3.x",
         "async": "0.2.x",
         "node.extend": "1.0.x",
         "dot": "1.0.x",
-        "requirejs": "2.1.9",
+        "requirejs": "2.1.x",
         "less-middleware": "0.1.x",
-        "less": "1.5.x",
+        "less": "1.6.x",
         "mkdirp": "0.3.x"
     },
     "description": "sailfish - это фремфорк для создания web-приложений на JavaScript. Фреймворк является самодостаточным, т.е содержит в себе как серверную так и клиентскую части.",
